# MSLab1

./: README.md  pyproject.toml  requirements.txt
app/: App.py  main.py  matrix.py
