[project]
name = "MatrixCalc"
version = "1.6.9"
description = "Calculates"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "NeLoh", email = "criper294@gmail.com" }
]
dependencies = [
  "flet"
]

[tool.flet]
org = "com.NeLoh"
product = "MatrixCalc"
company = "NeLoh"
copyright = "Copyleft (C) 2025 by NeLoh"

[tool.flet.app]
path = "app"